<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tennisscorecounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                style="@style/teams_data_style"
                android:text="@string/player_A_title" />

            <View style="@style/separator_view_style" />

            <TextView
                style="@style/teams_data_style"
                android:text="@string/player_B_title" />
        </LinearLayout>

        <TextView
            style="@style/title_style"
            android:text="@string/sets_title" />

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/player_A_sets_text_view"
                style="@style/teams_score_style" />

            <View style="@style/separator_view_style" />

            <TextView
                android:id="@+id/player_B_sets_text_view"
                style="@style/teams_score_style" />
        </LinearLayout>

        <TextView
            style="@style/title_style"
            android:text="@string/games_title" />

        <LinearLayout style="@style/linear_layout_style">

            <TextView
                android:id="@+id/player_A_games_text_view"
                style="@style/teams_score_style" />

            <View style="@style/separator_view_style" />

            <TextView
                android:id="@+id/player_B_games_text_view"
                style="@style/teams_score_style" />
        </LinearLayout>

        <TextView
            style="@style/title_style"
            android:text="@string/score_title" />

        <LinearLayout style="@style/linear_layout_style">

            <Button
                android:id="@+id/player_A_score_button"
                style="@style/teams_score_style"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="addScorePlayerA" />

            <View style="@style/separator_view_style" />

            <Button
                android:id="@+id/player_B_score_button"
                style="@style/teams_score_style"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="addScorePlayerB" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/set_type_radio_buttons_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/new_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/short_match_set_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:checked="true"
            android:onClick="setShortMatch"
            android:text="@string/short_match" />

        <RadioButton
            android:id="@+id/long_match_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:onClick="setLongMatch"
            android:text="@string/long_match" />
    </RadioGroup>

    <TextView
        android:id="@+id/info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/new_game_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="newMatch"
        android:text="@string/new_game"
        android:textAllCaps="true" />
</RelativeLayout>